force-app/main/default/objects/Account/fields/Preference_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Preference_de_contact__c</fullName>
    <label>Préférence de contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fixe du Foyer</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>