force-app/main/default/objects/Account/fields/Resultat_du_traitement__c.field-meta.xml
<CustomField>
    <fullName>Resultat_du_traitement__c</fullName>
    <label>Résultat du traitement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 - OK</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - KO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Indéterminé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>