force-app/main/default/objects/Account/fields/Routeur_Mediametrie__c.field-meta.xml
<CustomField>
    <fullName>Routeur_Mediametrie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routeur MMAT</label>
    <type>Checkbox</type>
</CustomField>