force-app/main/default/objects/Account/fields/Satisfaction_de_participation_au_panel__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_de_participation_au_panel__c</fullName>
    <label>Satisfaction de participation au panel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Très satisfait</fullName>
            </value>
            <value>
                <fullName>2. Plutôt satisfait</fullName>
            </value>
            <value>
                <fullName>3. Plutôt pas satisfait</fullName>
            </value>
            <value>
                <fullName>4. Pas du tout satisfait</fullName>
            </value>
            <value>
                <fullName>5. Ne se prononce pas</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
                <isActive>false</isActive>
                <label>Non</label>
            </value>
            <value>
                <fullName>Oui</fullName>
                <isActive>false</isActive>
                <label>Oui</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>