force-app/main/default/objects/Account/fields/Single_source__c.field-meta.xml
<CustomField>
    <fullName>Single_source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foyer pilote</label>
    <type>Checkbox</type>
</CustomField>