force-app/main/default/objects/Account/fields/Solde_de_points__c.field-meta.xml
<CustomField>
    <fullName>Solde_de_points__c</fullName>
    <formula>Nombre_de_points_cumules__c - Nombre_de_points_debites__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solde de points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>