force-app/main/default/objects/Account/fields/Sous_type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_d_intervention__c</fullName>
    <label>Sous-type d&apos;intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Nouveau foyer</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Ajout Equipement</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Suppression d&apos;un poste</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Définitive</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Déménagement</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Réinstallation</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Mutation Audimètre</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Vérification des éléments</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Contrôle audience</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Recensement</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Passage Improviste</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Visite de courtoisie</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Changement</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Contrôle de connexion</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Contrôle de l&apos;installation</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Vérification de l&apos;initialisation</label>
            </value>
            <value>
                <fullName>13</fullName>
                <isActive>false</isActive>
                <label>13</label>
            </value>
            <value>
                <fullName>14</fullName>
                <isActive>false</isActive>
                <label>14</label>
            </value>
            <value>
                <fullName>24</fullName>
                <isActive>false</isActive>
                <label>24</label>
            </value>
            <value>
                <fullName>25</fullName>
                <isActive>false</isActive>
                <label>25</label>
            </value>
            <value>
                <fullName>26</fullName>
                <isActive>false</isActive>
                <label>26</label>
            </value>
            <value>
                <fullName>27</fullName>
                <isActive>false</isActive>
                <label>27</label>
            </value>
            <value>
                <fullName>28</fullName>
                <isActive>false</isActive>
                <label>28</label>
            </value>
            <value>
                <fullName>29</fullName>
                <isActive>false</isActive>
                <label>29</label>
            </value>
            <value>
                <fullName>30</fullName>
                <isActive>false</isActive>
                <label>30</label>
            </value>
            <value>
                <fullName>31</fullName>
                <isActive>false</isActive>
                <label>31</label>
            </value>
            <value>
                <fullName>32</fullName>
                <isActive>false</isActive>
                <label>32</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>