force-app/main/default/objects/Account/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Numéro de la station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>