force-app/main/default/objects/Account/fields/Statut_d_occupation__c.field-meta.xml
<CustomField>
    <fullName>Statut_d_occupation__c</fullName>
    <label>Statut d’occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>LOCATAIRE</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>PROPRIETAIRE OU ACCEDANT A LA PROPRIETE</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>AUTRE</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>REFUS</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Non renseignée</label>
            </value>
            <value>
                <fullName>Propriétaire</fullName>
                <isActive>false</isActive>
                <label>Propriétaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>