force-app/main/default/objects/Account/fields/Statut_du_foyer_picto__c.field-meta.xml
<CustomField>
    <fullName>Statut_du_foyer_picto__c</fullName>
    <formula>CASE(
				VALUE(TEXT(Statut_du_foyer__c)),
    VALUE($Label.ACC_Statut_du_foyer_Recrute), $Label.ACC_Statut_du_foyer_Recrute_Label,
				VALUE($Label.ACC_Statut_du_foyer_Installe), $Label.ACC_Statut_du_foyer_Installe_Label,
				VALUE($Label.ACC_Statut_du_foyer_Equipe), $Label.ACC_Statut_du_foyer_Equipe_Label,
				VALUE($Label.ACC_Statut_du_foyer_Integre), $Label.ACC_Statut_du_foyer_Integre_Label,
				VALUE($Label.ACC_Statut_du_foyer_Desinstalle), $Label.ACC_Statut_du_foyer_Desinstalle_Label,
				IMAGE(&apos;/img/samples/color_red.gif&apos;, $Label.ACC_Statut_du_foyer_Chute_definitive_Label, 30, 30)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut du foyer</label>
    <type>Text</type>
</CustomField>