force-app/main/default/objects/Account/fields/Suspendu_image__c.field-meta.xml
<CustomField>
    <fullName>Suspendu_image__c</fullName>
    <formula>IF(Suspendu__c, IMAGE(&quot;/resource/foyer_suspendu&quot;, &quot;Oui&quot;, 30, 30), &quot;Non&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suspendu</label>
    <type>Text</type>
</CustomField>