force-app/main/default/objects/Account/fields/SVOD__c.field-meta.xml
<CustomField>
    <fullName>SVOD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SVOD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>