force-app/main/default/objects/Account/fields/TECH_CongePrincipal__c.field-meta.xml
<CustomField>
    <fullName>TECH_CongePrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TECH_CongePrincipal</label>
    <referenceTo>Conge__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Foyers</relationshipName>
    <type>Lookup</type>
</CustomField>