force-app/main/default/objects/Account/fields/Tech_fieldToDelete__c.field-meta.xml
<CustomField>
    <fullName>Tech_fieldToDelete__c</fullName>
    <formula>Nombre_de_points_cumules__c - Nombre_de_points_debites__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_fieldToDelete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>