force-app/main/default/objects/Account/fields/Tech_RDD_fichier_OK__c.field-meta.xml
<CustomField>
    <fullName>Tech_RDD_fichier_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech RDD fichier OK</label>
    <type>Checkbox</type>
</CustomField>