force-app/main/default/objects/Account/fields/Tech_Types_de_Panel__c.field-meta.xml
<CustomField>
    <fullName>Tech_Types_de_Panel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tech_Types_de_Panel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>