force-app/main/default/objects/Account/fields/TECHi_is_WorkOrder_Changed__c.field-meta.xml
<CustomField>
    <fullName>TECHi_is_WorkOrder_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECHi s WorkOrder Changed</label>
    <type>Checkbox</type>
</CustomField>