force-app/main/default/objects/Account/fields/Territoire_de_service__c.field-meta.xml
<CustomField>
    <fullName>Territoire_de_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territoire de service</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Foyers</relationshipLabel>
    <relationshipName>Foyers</relationshipName>
    <type>Lookup</type>
</CustomField>