force-app/main/default/objects/Account/fields/Type_d_acc_s_internet__c.field-meta.xml
<CustomField>
    <fullName>Type_d_acc_s_internet__c</fullName>
    <label>Type d&apos;accès internet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Non réponse</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Pas d&apos;accès Internet</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Modem classique (RTC)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Connexion câble</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Connexion ADSL</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Satellite</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Ligne Numéris (RNIS)</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Fibre optique</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>NSP</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Clé 3G</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>