force-app/main/default/objects/Account/fields/Type_d_habitation__c.field-meta.xml
<CustomField>
    <fullName>Type_d_habitation__c</fullName>
    <label>Type d&apos;habitation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>MAISON INDIVIDUELLE</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>IMMEUBLE</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>FERME</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Non renseignée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>