force-app/main/default/objects/Account/fields/Type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Type_d_intervention__c</fullName>
    <label>Type d&apos;intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_d_intervention</valueSetName>
    </valueSet>
</CustomField>