force-app/main/default/objects/Account/fields/Type_de_foyer__c.field-meta.xml
<CustomField>
    <fullName>Type_de_foyer__c</fullName>
    <label>Type de foyer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Médiamat</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>PaME</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Single Source</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>AIP</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Multi panel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>