force-app/main/default/objects/Account/fields/Types_de_Panel__c.field-meta.xml
<CustomField>
    <fullName>Types_de_Panel__c</fullName>
    <label>Types de Panel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MMT</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
            <value>
                <fullName>PaME</fullName>
            </value>
            <value>
                <fullName>Mesure Plateforme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>