force-app/main/default/objects/Account/recordTypes/foyer_equipe.recordType-meta.xml
<RecordType>
    <fullName>foyer_equipe</fullName>
    <active>true</active>
    <label>Foyer équipé TV</label>
</RecordType>