force-app/main/default/objects/Account/recordTypes/foyer_non_equipe.recordType-meta.xml
<RecordType>
    <fullName>foyer_non_equipe</fullName>
    <active>true</active>
    <label>Foyer non équipé TV</label>
</RecordType>