force-app/main/default/objects/Account/validationRules/RV04_telephone_requis.validationRule-meta.xml
<ValidationRule>
    <fullName>RV04_telephone_requis</fullName>
    <active>true</active>
    <description>Règle qui vérifie qu&apos;au moins un champ de numéro de téléphone est bien rempli quand le type de panel est Mediamat ou PaME</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				! $User.Bypass_RDD__c, 
				OR(
								TEXT(Type_de_foyer__c) = $Label.ACC_Type_de_panel_Mediamat,
								TEXT(Type_de_foyer__c) = $Label.ACC_Type_de_panel_Pame
				),
				ISBLANK(Numero_de_telephone_fixe__c),
				ISBLANK(Numero_de_portable__c)
)</errorConditionFormula>
    <errorMessage>Au moins un numéro de téléphone doit être renseigné.</errorMessage>
</ValidationRule>