force-app/main/default/objects/Account/validationRules/RV06_date_chute_temporaire_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV06_date_chute_temporaire_obligatoire</fullName>
    <active>false</active>
    <description>Règle qui oblige la saisie du champ Date de chute temporaire si le foyer équipé est au statut Désinstallé ou si le statut du foyer non équipé passe à Chute définitive</description>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
ISBLANK(Date_de_chute_temporaire__c),
OR(TEXT(Statut_du_foyer__c) = $Label.ACC_Statut_du_foyer_Desinstalle,
AND(ISCHANGED(Statut_du_foyer__c),
TEXT(Statut_du_foyer__c) = $Label.ACC_Statut_du_foyer_Chute_definitive, RecordType.DeveloperName  =  $Label.Acc_TypeD_Enregistrement_NonEquipe) 
)				
)</errorConditionFormula>
    <errorDisplayField>Date_de_chute_temporaire__c</errorDisplayField>
    <errorMessage>La date de chute temporaire est obligatoire si le statut du foyer est « Désinstallé » ou si le statut du foyer non équipé passe à « Chute définitive »</errorMessage>
</ValidationRule>