force-app/main/default/objects/Account/validationRules/RV07_modification_foyer_impossible.validationRule-meta.xml
<ValidationRule>
    <fullName>RV07_modification_foyer_impossible</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Bypass_validation_rules__c,
				!$User.Bypass_for_OwnBackup_users__c,
$User.Username&lt;&gt;$Label.Mulesoft_integrationUser_username,		 
    TEXT(PRIORVALUE(Statut_du_foyer__c)) = 
    $Label.ACC_Statut_du_foyer_Chute_definitive,
TODAY() - Date_de_chute__c &gt;= VALUE($Label.RV_Limitation_debit_apres_chute)
)</errorConditionFormula>
    <errorMessage>Un foyer chuté n’est plus modifiable</errorMessage>
</ValidationRule>