force-app/main/default/objects/Account/validationRules/RV08_pas_d_espaces.validationRule-meta.xml
<ValidationRule>
    <fullName>RV08_pas_d_espaces</fullName>
    <active>true</active>
    <description>Règle qui empêche la saisie d&apos;espaces dans les champs de type téléphone</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				OR(
								AND(
												!ISBLANK(Numero_de_portable__c),
												CONTAINS(Numero_de_portable__c, &quot; &quot;) 
								),
								AND(
												!ISBLANK(Numero_de_telephone_fixe__c),
												CONTAINS(Numero_de_telephone_fixe__c, &quot; &quot;) 
								),
								AND(
												!ISBLANK(Numero_du_conjoint__c),
												CONTAINS(Numero_du_conjoint__c, &quot; &quot;) 
								)
				)
)</errorConditionFormula>
    <errorMessage>Un numéro de téléphone ne doit pas contenir d&apos;espace</errorMessage>
</ValidationRule>