force-app/main/default/objects/Account/validationRules/RV09_installe_apres_intervention.validationRule-meta.xml
<ValidationRule>
    <fullName>RV09_installe_apres_intervention</fullName>
    <active>false</active>
    <description>Règle qui empêche le foyer de passer au statut Installé s&apos;il n&apos;y a pas eu d&apos;intervention de type installation et que la date d&apos;installation n&apos;est pas renseignée</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				ISCHANGED(Statut_du_foyer__c),
				TEXT(Statut_du_foyer__c) = $Label.ACC_Statut_du_foyer_Installe,
				
								ISBLANK(Date_d_installation__c)
			
)</errorConditionFormula>
    <errorMessage>Un foyer ne peut passer au statut Installé que si une intervention de type « Installation » est présente et que le champ « Date d&apos;installation » est renseigné.</errorMessage>
</ValidationRule>