force-app/main/default/objects/Account/validationRules/RV10_date_d_integration_requise.validationRule-meta.xml
<ValidationRule>
    <fullName>RV10_date_d_integration_requise</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				TEXT(Statut_du_foyer__c) = $Label.ACC_Statut_du_foyer_Equipe,
				ISBLANK(Date_d_integration__c)
)</errorConditionFormula>
    <errorMessage>Un foyer ne peut passer au statut équipé que si la date d&apos;intégration est renseignée</errorMessage>
</ValidationRule>