force-app/main/default/objects/Account/validationRules/RV13_MajCoordonne_passe_futur_non_possib.validationRule-meta.xml
<ValidationRule>
    <fullName>RV13_MajCoordonne_passe_futur_non_possib</fullName>
    <active>false</active>
    <description>La Maj coordonnés choisi doit être la date du jour.</description>
    <errorConditionFormula>AND(
    !$User.Bypass_validation_rules__c,
				$User.Username&lt;&gt;$Label.Mulesoft_integrationUser_username,
    OR(
     Maj_coordonnees__c &lt;  TODAY(),
     Maj_coordonnees__c &gt;  TODAY()
    ),

     OR(
        ISNEW(),
        ISCHANGED(Maj_coordonnees__c ) 
       )
  )</errorConditionFormula>
    <errorDisplayField>Maj_coordonnees__c</errorDisplayField>
    <errorMessage>Merci de choisir la date d&apos;aujourd&apos;hui.</errorMessage>
</ValidationRule>