force-app/main/default/objects/Account/validationRules/RV14_dateFreeze_passe_futur_non_possible.validationRule-meta.xml
<ValidationRule>
    <fullName>RV14_dateFreeze_passe_futur_non_possible</fullName>
    <active>false</active>
    <description>La date de freeze choisi doit être la date du jour.</description>
    <errorConditionFormula>AND(
    !$User.Bypass_validation_rules__c,
    OR(
     Date_de_Freeze__c &lt;  TODAY(),
     Date_de_Freeze__c &gt;  TODAY()
    ),

     OR(
        ISNEW(),
        ISCHANGED(Date_de_Freeze__c ) 
       )
  )</errorConditionFormula>
    <errorDisplayField>Date_de_Freeze__c</errorDisplayField>
    <errorMessage>Merci de choisir la date d&apos;aujourd&apos;hui.</errorMessage>
</ValidationRule>